# SensorLog

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  rpi3.Dockerfile  rpizw.Dockerfile
.github/workflows/: binary-release.yml
src/: lib.rs  main.rs  server.rs
src/api/: logger.rs
src/db/: sqlite.rs
src/handlers/: logger.rs
src/models/: mod.rs  sensor_logs.rs
src/tests/: logger.rs  mod.rs  utils.rs
src/utils/: mod.rs
