[package]
name = "logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# `cargo run --bin name` will point to the path we define here(Should use autobins = false)
[[bin]]
name = "playground"
path = "src/bin/playground.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }

serde_derive = "1.0.137"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
csv = "1.1.6"

r2d2 = "0.8.9"
r2d2_sqlite = "0.21.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
